--- a/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
+++ b/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
@@ -13,7 +13,30 @@
     Layout = null;
     ViewBag.Title = "Další informace " + Model.Jmeno;
 }
+<style>
+    .chart-tooltip-shared {
+        margin: 5px;
+        border: none;
+    }
 
+    .chart-tooltip-shared td + td {
+        color: #333333;
+        font-weight: bold;
+        text-align: right;
+    }
+
+    .chart-tooltip-shared td {
+        padding: 5px;
+    }
+
+    .chart-title-shared {
+        color: #28313B;
+        font-family: Cabin;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+</style>
 
     @* První sloupec *@
     <div class="col-sm-7 col-sm-pull-5 col-xs-12 col-xs-pull-0">
@@ -92,4 +115,116 @@
             </div>
         }
 
+        <hr /><hr />
+
+        @{ 
+            var serie = new HlidacStatu.Lib.Render.Series[]
+            {
+                new HlidacStatu.Lib.Render.Series()
+                {
+                    Color = "#AAAAAA",
+                    Name = "pokustón",
+                    YAxis = 0,
+                    Type = "column",
+                    Data = new SeriesData[]
+                    {
+                        new SeriesData()
+                        {
+                            X = 2000,
+                            Y = 10
+                        },
+                        new SeriesData()
+                        {
+                            X = 2001,
+                            Y = 20
+                        },
+                        new SeriesData()
+                        {
+                            X = 2002,
+                            Y = 15
+                        },
+                        new SeriesData()
+                        {
+                            X = 2003,
+                            Y = 30
+                        }
+                    },
+                    SeriesTooltip = new SeriesTooltip()
+                    {
+                        ValueSuffix = "Kč"
+                    }
+                },
+                new HlidacStatu.Lib.Render.Series()
+                {
+                    Color = "#00AAAA",
+                    Name = "bob",
+                    YAxis = 1,
+                    Type = "line",
+                    Data = new SeriesData[]
+                    {
+                        new SeriesData()
+                        {
+                            X = 2000,
+                            Y = 5
+                        },
+                        new SeriesData()
+                        {
+                            X = 2001,
+                            Y = 7
+                        },
+                        new SeriesData()
+                        {
+                            X = 2002,
+                            Y = 9
+                        },
+                        new SeriesData()
+                        {
+                            X = 2003,
+                            Y = 20
+                        }
+                    },
+                    SeriesTooltip = new SeriesTooltip()
+                    {
+                        ValueSuffix = "z klobouku",
+                        ValuePrefix = "Králík"
+
+                    }
+                },
+                new HlidacStatu.Lib.Render.Series()
+                {
+                    Color = "#00AAAA",
+                    Name = "bobek",
+                    YAxis = 0,
+                    Type = "column",
+                    Data = new SeriesData[]
+                    {
+                        new SeriesData()
+                        {
+                            X = 2000,
+                            Y = 3
+                        },
+                        new SeriesData()
+                        {
+                            X = 2001,
+                            Y = 2
+                        },
+                        new SeriesData()
+                        {
+                            X = 2002,
+                            Y = 1
+                        },
+                        new SeriesData()
+                        {
+                            X = 2003,
+                            Y = 0
+                        }
+                    }
+                }
+
+            };
+        }
+
+
+        @Html.ColumnGraph("nazev grafu", serie)
+        <hr /><hr />
     </div>
