--- a/Web.Statu/Views/ApiV1/Index.cshtml
+++ b/Web.Statu/Views/ApiV1/Index.cshtml
@@ -39,7 +39,8 @@
 
                         <td>
                             <ul>
-                            <li><a style="font-size:100%" href="https://www.hlidacstatu.cz/api/v2/swagger/index">Dokumentace API v2</a></li>
+                            <li><a style="font-size:100%" href="https://www.hlidacstatu.cz/api/v1/doc">Dokumentace API v2, databází a formátování</a></li>
+                            <li><a style="font-size:100%" href="https://www.hlidacstatu.cz/api/v2/swagger/index">Dokumentace REST API V2</a></li>
                             <li><a style="font-size:100%" href="https://www.hlidacstatu.cz/api/v2/swagger/">Swagger file API v2</a></li>
                             </ul>
                         </td>
