--- a/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
+++ b/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
@@ -124,29 +124,28 @@
                 {
                     Color = "#AAAAAA",
                     Name = "pokustón",
-                    YAxis = 0,
-                    Type = "column",
+                    Type = Series.SeriesType.column,
                     Data = new SeriesData[]
                     {
                         new SeriesData()
                         {
                             X = 2000,
-                            Y = 10
+                            Y = 10000
                         },
                         new SeriesData()
                         {
                             X = 2001,
-                            Y = 20
+                            Y = 20000
                         },
                         new SeriesData()
                         {
                             X = 2002,
-                            Y = 15
+                            Y = 15000
                         },
                         new SeriesData()
                         {
                             X = 2003,
-                            Y = 30
+                            Y = 30315
                         }
                     },
                     SeriesTooltip = new SeriesTooltip()
@@ -156,31 +155,30 @@
                 },
                 new HlidacStatu.Lib.Render.Series()
                 {
-                    Color = "#00AAAA",
+                    Color = "#00AA00",
                     Name = "bob",
-                    YAxis = 1,
-                    Type = "line",
+                    Type = Series.SeriesType.line,
                     Data = new SeriesData[]
                     {
                         new SeriesData()
                         {
                             X = 2000,
-                            Y = 5
+                            Y = 50125
                         },
                         new SeriesData()
                         {
                             X = 2001,
-                            Y = 7
+                            Y = 47854
                         },
                         new SeriesData()
                         {
                             X = 2002,
-                            Y = 9
+                            Y = 12000
                         },
                         new SeriesData()
                         {
                             X = 2003,
-                            Y = 20
+                            Y = 315211
                         }
                     },
                     SeriesTooltip = new SeriesTooltip()
@@ -195,28 +193,28 @@
                     Color = "#00AAAA",
                     Name = "bobek",
                     YAxis = 0,
-                    Type = "column",
+                    Type = Series.SeriesType.column,
                     Data = new SeriesData[]
                     {
                         new SeriesData()
                         {
                             X = 2000,
-                            Y = 3
+                            Y = 3000
                         },
                         new SeriesData()
                         {
                             X = 2001,
-                            Y = 2
+                            Y = 8000
                         },
                         new SeriesData()
                         {
                             X = 2002,
-                            Y = 1
+                            Y = 7000
                         },
                         new SeriesData()
                         {
                             X = 2003,
-                            Y = 0
+                            Y = 5000
                         }
                     }
                 }
